<resources>
    <string name="app_name">AndroidPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="popular">Popular Movies</string>
    <string name="stock">Stock Hawk</string>
    <string name="make">Make Your App Material</string>
    <string name="build">Build It Bigger</string>
    <string name="go">Go Ubiquitous</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="header">My Nanodegree Apps!</string>
</resources>
